# circGameCalc

./: .gitignore  LICENSE  circGamCalc.cabal  circGameCalc.cabal
src/: Main.hs
src/Calc/: PieceLogic.hs
test/: MainTests.hs
test/QuickCheck/: PieceLogicTests.hs
