name:                circGamCalc
version:             0.1.0.0
license-file:        LICENSE
author:              Beothorn
maintainer:          beothorn@example.com
build-type:          Simple
cabal-version:       >=1.10

executable circGameCalc
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010

test-suite mainTests
  hs-source-dirs: test, src
  main-is: MainTests.hs
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base >=4.7 && <4.8,
                 QuickCheck,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 test-framework-quickcheck2
